Support example generating.
